# namehistory

./: .env.example  .gitignore  LICENSE  README.md  captcha_routes.py  challenge_store.py  config-example.toml  config.toml  config_loader.py  main.py  migrate.py  minecraft_api.py  pyproject.toml  requirements.txt  skin_assets.py  start-all-prod.sh  votes_api.py
providers/: __init__.py  badlion.py  base.py  essentials.py  http_client.py  hypixel.py  laby_challenge.py  laby_textures.py  labymod.py  lunar.py  minecraftuuid.py  mineplex.py  namemc_stats.py  registry.py
providers/votes/: __init__.py  base.py  claim_api.py  namemc.py  registry.py  topgservers.py
scripts/: test_local.py
webui/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
webui/src/: config.js  main.js  style.css
webui/src/components/: layout.js
webui/src/lib/: api.js  auth.js  challenge_gate.js  format.js  router.js
webui/src/views/: admin.js  docs.js  home.js  profile.js
