[project]
name = "namehistory"
version = "0.1.0"
description = "API server for retrieving, storing, and managing Minecraft player name history"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "liforra" }]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "curl-cffi>=0.15.0",
    "Flask>=3.0.3",
    "Pillow>=11.3.0",
    "psycopg2-binary>=2.9.12",
    "PyMySQL>=1.1.0",
    "python-dateutil>=2.9.0",
    "requests>=2.32.3",
    "SQLAlchemy>=2.0.51,<3",
]

[project.urls]
Repository = "https://codeberg.org/liforra/namehistory"
Mirror = "https://github.com/liforra/namehistory"
